# osu-topscores-scrapper

./: Cargo.toml  env_example
src/: error.rs  main.rs  osu_api.rs
