[package]
name = "vasteri-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ['derive'] }
eyre = "0.6.8"
hyper = { version = "0.14.23", features = ['client'] }
hyper-rustls = "0.23.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ['macros', 'rt-multi-thread'] }
